<resources>
    <string name="app_name">Be Safe</string>
    <string name="action_cat">Add/Edit Category</string>
    <string name="action_settings">Setting</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About Be Safe</string>
    <string name="_ok">OK</string>
    <string name="_yes">YES</string>
    <string name="_no">NO</string>
    <string name="_edit">Edit</string>
    <string name="_delete">Delete</string>
    <string name="_delete_cat">Delete Category</string>
    <string name="_delete_account">Delete Account ?</string>
    <string name="_delete_account_ar_you_sure_part1">Are you sure ,you what to delete (</string>
    <string name="_delete_account_ar_you_sure_part2">) account ?</string>
    <string name="_delete_cat_ar_you_sure_part2">) category ?</string>
    <string name="_back_to_exit">Please click BACK again to exit</string>
    <string name="_cant_delete_cat"> Sorry this category cant be edit</string>
    <string name="_cat_exist"> Category exist ! </string>
    <string name="_fill_inputs"> You have to fill all inputs </string>
    <string name="_edit_account"> Edit this account </string>
    <string name="_delete_this_account"> Delete this account </string>
    <string name="_username"> Username :  </string>
    <string name="_password"> Password :  </string>
    <string name="_show_password">Show Password</string>
    <string name="_name_cat">Name your category</string>
    <string name="_empty_main_imput_message">Please add new account by pressing on plus icon below</string>
    <string name="_cat_name"> Category Name </string>
    <string name="_save">Save</string>
    <string name="_add">Add</string>
    <string name="_account">Account</string>
    <string name="large_text">
        "Be Safe App.\n\n"

        "This app for saving your account detales to save yourself from forgetting your account information.\n\n"
        "Make sure that all of your information will be safe and encripted , so no one can be hacking you.\n\n"
        "Application Vesion : 1.1.1 .\n\n"

    </string>
    <string name="title_activity_master_setting">BeSafe Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <string name="title_activity_pin">BeSafe</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
</resources>
