<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.besafe.noubax.besafe.createAccount">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_username"
        android:id="@+id/textUsername"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/editUsername" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:layout_below="@+id/textUsername"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_password"
        android:id="@+id/textPassword"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editUsername"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword"
        android:layout_below="@+id/textPassword"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/textPassword"
        android:singleLine="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_cat_name"
        android:id="@+id/textType"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/editPassword"
        android:layout_alignParentEnd="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerType"
        android:layout_below="@+id/textType"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/AddCategory"
        android:layout_alignBottom="@+id/AddCategory" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Password Algorithm"
        android:id="@+id/textAlgo"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerType"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinnerAlgo"
        android:layout_below="@+id/textAlgo"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:visibility="gone"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_save"
        android:id="@+id/buttonSave"
        android:layout_centerVertical="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_add"
        android:id="@+id/AddCategory"
        android:layout_below="@+id/textType"
        android:layout_alignEnd="@+id/textType"
        android:layout_above="@+id/buttonSave"
        android:minHeight="10dp"/>
</RelativeLayout>
